# ece1724rustproject

./: README.md
llm-gen/: Cargo.toml
llm-gen/src/: engine.rs  main.rs
llm-gen/src/routes/: generate.rs
llm-server/: Cargo.toml  chats.sqlite
llm-server/server-impl-plan/: 2025-11-05-meeting.md
llm-server/src/: chat_history.rs  engine.rs  main.rs  state.rs  types.rs
llm-server/src/routes/: generate.rs
llm-ui/: .gitignore  Cargo.toml  todo.md
llm-ui/src/: app.rs  chat_screen.rs  colour_screen.rs  history_screen.rs  key_handler.rs  main.rs  menu_screen.rs  signin_screen.rs
llmapp/: .gitignore  Cargo.toml
llmapp/src/: main.rs
plan/: 2025-11-05-meeting.md
