[package]
name = "llm-gen"
version = "0.1.0"
edition = "2021"

[features]
default = []
accelerate = [
    "candle-core/accelerate",
    "candle-nn/accelerate",
    "candle-transformers/accelerate",
    "candle-examples/accelerate",
]
metal = [
    "candle-core/metal",
    "candle-nn/metal",
    "candle-transformers/metal",
    "candle-examples/metal",
]

[dependencies]
anyhow = "1.0"
candle-core = "0.9.2-alpha.1"
candle-nn = "0.9.2-alpha.1"
candle-transformers = "0.9.2-alpha.1"
candle-examples = "0.9.2-alpha.1"
hf-hub = { version = "0.4", features = ["tokio"] }
serde_json = "1.0"
tokenizers = "0.21"
