[package]
name = "llm-server"
version = "0.1.0"
edition = "2021"

[features]
default = []
accelerate = [
    "candle-core/accelerate",
    "candle-nn/accelerate",
    "candle-transformers/accelerate",
    "candle-examples/accelerate",
]
metal = [
    "candle-core/metal",
    "candle-nn/metal",
    "candle-transformers/metal",
    "candle-examples/metal",
]

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros", "json"] }
candle-core = "0.9.2-alpha.1"
candle-nn = "0.9.2-alpha.1"
candle-transformers = "0.9.2-alpha.1"
candle-examples = "0.9.2-alpha.1"
hf-hub = { version = "0.4", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizers = "0.21"
tokio = { version = "1.40", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
rusqlite = {version = "0.37", features = ["bundled"]}
