[package]
name = "llm-ui"
version = "0.1.0"
edition = "2021"

[features]
default = []
accelerate = [
    "candle-core/accelerate",
    "candle-nn/accelerate",
    "candle-transformers/accelerate",
    "candle-examples/accelerate",
]
metal = [
    "candle-core/metal",
    "candle-nn/metal",
    "candle-transformers/metal",
    "candle-examples/metal",
]

[dependencies]
anyhow = "1.0"
candle-core = "0.9.2-alpha.1"
candle-nn = "0.9.2-alpha.1"
candle-transformers = "0.9.2-alpha.1"
candle-examples = "0.9.2-alpha.1"
hf-hub = { version = "0.4", features = ["tokio"] }
serde_json = "1.0"
tokenizers = "0.21"
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = { version = "0.29", features = ["crossterm"] }
tracing-subscriber = "0.3.20"
tui = "0.19.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
itertools = "0.14.0"
